--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.9",
+    "enzyme": "^3.11.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "2.4.0"
   }
